finished page footer

--- a/application/index/view/activity/view.html
+++ b/application/index/view/activity/view.html
@@ -6,42 +6,7 @@
 
 {block name="header"}
 <style>
-    .activity-caption
-    {
-        color: green;
-        text-align: center;
-    }
-
-    .activity-content
-    {
-        max-width:100%;
-        overflow-wrap: break-word;
-        background: white;
-        padding-bottom: 25px;
-        padding-top: 25px;
-        margin-bottom: 20px;
-        border-radius:10px;
-    }
-
-    @media (min-width: 768px)
-    {
-            .activity-content
-            {
-                padding-left:50px;
-                padding-right:50px;
-            }
-    }
-
-    @media (max-width: 767px)
-    {
-        .activity-content
-        {
-            padding-left:25px;
-            padding-right:25px;
-        }
-    }
-
-    img
+    .activity-content img
     {
         max-width: 100%;
         height: auto;
