--- a/application/index/view/blog/view.html
+++ b/application/index/view/blog/view.html
@@ -6,31 +6,8 @@
 
 {block name="header"}
 <style>
-    .blog-content
-    {
-        background:white;
-        padding: 20px;
-        border-radius: 10px;
-    }
 
-    .blog-caption
-    {
-        text-align:center;
-    }
-
-    .blog-author
-    {
-        color:red;;
-    }
-
-    .blog-meta-data
-    {
-        text-align:center;
-        display: block;
-        margin-bottom: 40px;
-    }
-
-    img
+    activity-content img
     {
         max-width: 100%;
         height: auto;
@@ -52,7 +29,7 @@
 
     <div class="blog-content">
         <h1 class="blog-caption">{$blog.caption}</h1>
-        <span class="blog-meta-data">作者：<span class="blog-author">{$blog.author}</span>•{$blog.createtime|date="Y年n月j日", ###}</span>
+        <span class="blog-meta-data">作者：<span class="blog-author">{$blog.author}</span> • {$blog.createtime|date="Y年n月j日", ###}</span>
         <hr/>
         <div>
             {$blog.content}
