--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -38,10 +38,9 @@
     </div>
 </div>
 
-<h2 class="text-primary center">活动推荐</h2>
-<div class="container-fluid recommend-activity">
-    <div class="container">
-        <h4 class="text-primary">周边路线</h4>
+<h2 class="index-activity-title center">活动推荐</h2>
+<div class="container recommend-activity">
+    <div>
         {foreach name="featuredactivity" item="activity"}
         {if condition="$key%3 eq '0'"}
         <div class="row text-center">
@@ -58,49 +57,43 @@
         {/if}
         {/foreach}
     </div>
+    <a href="/index/activity/" class="pull-right a-see-more-activity">更多活动</a>
 </div>
 
-
-<!--
-<div class="container-fluid recommend-activity" style="margin-top:20px;">
-    <div class="container">
-        <h4 class="text-primary ">长途路线</h4>
-        <div class="col-md-4 center">
-            <img src="holder.js/320x240"/>
-        </div>
-        <div class="col-md-4 center">
-            <img src="holder.js/320x240"/>
-        </div>
-        <div class="col-md-4 center">
-            <img src="holder.js/320x240"/>
-        </div>
-    </div>
-</div>
--->
 <div class="container">
-    <h1 class="text-primary center">精彩游记</h1>
+    <h1 class="index-blog-title center ">精彩游记</h1>
     <div class="row">
         {foreach name="featuredBlog" item="blog"}
         <div class="blog-entry ">
-            <div class="col-md-6 col-sm-6">
+            {if condition="$key%2 eq 0"}
+            <div class="col-md-6 col-sm-6 blog-entry-img-column">
                 <a href="/index/blog/view?id={$blog.id}"> <img class="img-rounded blog-entry-img center-block" src="/{$blog.cover}"/></a>
             </div>
             <div class="col-md-6 col-sm-6">
                 <div>
                     <h2 class="blog-entry-caption"><a href="/index/blog/view?id={$blog.id}">{$blog.caption}</a></h2>
-                    <h3 class="hidden-xs">{$blog.author}</h3>
-                    <h3 class="hidden-sm hidden-xs">{$blog.createtime|date="n月j号",###}</h3>
+                    <h3 class="hidden-xs blog-entry-author">BY {$blog.author}</h3>
+                    <h3 class="hidden-sm hidden-xs blog-entry-date"><span style="color:red;"> @</span> {$blog.createtime|date="n月j号",###}</h3>
                 </div>
             </div>
+            {else /}
+            <div class="col-md-6 col-sm-6 blog-entry-desc-column-right">
+                <div>
+                    <h2 class="blog-entry-caption"><a href="/index/blog/view?id={$blog.id}">{$blog.caption}</a></h2>
+                    <h3 class="hidden-xs blog-entry-author">BY {$blog.author}</h3>
+                    <h3 class="hidden-sm hidden-xs blog-entry-date"><span style="color:red;">@</span> {$blog.createtime|date="n月j号",###}</h3>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-6 blog-entry-img-column-right">
+                <a href="/index/blog/view?id={$blog.id}"> <img class="img-rounded blog-entry-img center-block" src="/{$blog.cover}"/></a>
+            </div>
+            {/if}
+            <div class="clearfix"></div>
         </div>
-        <div class="clearfix"></div>
-        <hr style="border-color:#eee;"/>
+
         {/foreach}
     </div>
-</div>
-
-<div class="container">
-    <h1 class="text-primary center">加入我们</h1>
+    <a href="/index/blog/" class="pull-right a-see-more-blog">更多游记</a>
 </div>
 
 {/block}
