--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -15,12 +15,15 @@
             $('#{block name="tab"}{/block}').addClass("active");
         })
     </script>
+    <style>
+
+    </style>
     {block name="header"}
     {/block}
 </head>
 <body class="index-bg">
 
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -28,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" style="padding-top: 2px;padding-bottom:2px;" href="/"><img style="height:46px;width:auto;" src="/static/image/logo.jpg"/></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
@@ -44,7 +47,22 @@
     {block name="content"}{/block}
 </div>
 
-<footer>
+<footer class="container index-footer">
+    <div class="row">
+        <div class="col-sm-4 col-xs-6">
+            <h4 class="text-center index-footer-label">扫一扫关注微信公众号</h4>
+            <img class="center-block" src="holder.js/160x160"/>
+        </div>
+        <div class="col-sm-4 col-xs-6">
+            <h4 class="text-center index-footer-label">扫一扫加入QQ群</h4>
+            <img class="center-block" src="holder.js/160x160"/>
+        </div>
+        <div class="col-sm-4 col-xs-12 index-footer-contact" >
+            <h4 class="text-center index-footer-contact-label ">email: 12345@qq.com</h4>
+            <h4 class="text-center index-footer-contact-label">微信号: 12345@qq.com</h4>
+            <h4 class="text-center index-footer-contact-label">wewalk outdoor club</h4>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
