some ui adjustment

--- a/application/index/view/blog/view.html
+++ b/application/index/view/blog/view.html
@@ -7,7 +7,7 @@
 {block name="header"}
 <style>
 
-    activity-content img
+    .blog-content img
     {
         max-width: 100%;
         height: auto;
