--- a/public/static/css/wewalk.css
+++ b/public/static/css/wewalk.css
@@ -24,6 +24,16 @@
     max-width: 375px;
     background: white;
     padding-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media(max-width: 767px)
+{
+    .activity-list-item
+    {
+        margin-bottom: 10px;
+    }
 }
 
 .activity-list-item > a
