--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>主页</title>
+    <title>{block name="title"}{/block}</title>
     <link href="/static/css/bootstrap.css" rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="/static/css/lightbox.css">
     <!-- jQuery (necessary JavaScript plugins) -->
@@ -26,7 +26,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="top-header">
     <div class="container">
         <div class="logo">
-            <h1><a href="index.html"><span class="glyphicon glyphicon-road" aria-hidden="true"></span>徒步天涯</a></h1>
+            <h1><a href="/"><span class="glyphicon glyphicon-road" aria-hidden="true"></span>徒步天涯</a></h1>
         </div>
     </div>
 </div>
@@ -47,12 +47,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!--/navbar header-->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">主页</a></li>
-                        <li><a href="#">目的地</a></li>
-                        <li><a href="about.html">关于</a></li>
-                        <li><a href="contact.html">联系我们</a></li>
-                        <li><a href="gallery.html">相册</a></li>
-                        <li><a href="typo.html">Typography</a></li>
+                        <li id="nav_index"><a href="/">主页</a></li>
+                        <li id="nav_destinations"><a href="/index/activity">目的地</a></li>
+                        <li id="nav_about"><a href="about.html">关于</a></li>
+                        <li id="nav_contact"><a href="contact.html">联系我们</a></li>
+                        <li id="nav_gallery"><a href="gallery.html">相册</a></li>
+                        <li id="nav_typo"><a href="typo.html">Typography</a></li>
                     </ul>
                 </div>
                 <!--/navbar collapse-->
@@ -64,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <script type="text/javascript" src="/static/js/bootstrap-3.1.1.min.js"></script>
     </div>
 </div>
-
+{block name="content"}{/block}
 <!-- footer -->
 <div class="footer">
     <div class="container">
@@ -127,6 +127,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
          };
          */
         $().UItoTop({ easingType: 'easeOutQuart' });
+        $("#nav_{block name="tab"}{/block}").addClass("active");
+        $("#nav_{block name="tab"}{/block}").children("a").attr("href", "#");
     });
 </script>
 <a href="#to-top" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
