add contact page

--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -50,7 +50,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <li id="nav_index"><a href="/">主页</a></li>
                         <li id="nav_destinations"><a href="/index/activity">目的地</a></li>
                         <li id="nav_about"><a href="about.html">关于</a></li>
-                        <li id="nav_contact"><a href="contact.html">联系我们</a></li>
+                        <li id="nav_contact"><a href="/index/contact">联系我们</a></li>
                         <li id="nav_gallery"><a href="gallery.html">相册</a></li>
                         <li id="nav_typo"><a href="typo.html">Typography</a></li>
                     </ul>
