--- a/application/admin/view/public/base.html
+++ b/application/admin/view/public/base.html
@@ -69,6 +69,10 @@
                     <li id="manage_blog"><a href="/admin/blog/index">管理游记</a></li>
                     <li id="new_blog"><a href="/admin/blog/create">新游记</a></li>
                 </ul>
+
+                <ul class="nav nav-sidebar">
+                    <li id="manage_message"><a href="/admin/message/index">查看消息</a></li>
+                </ul>
             </div>
 
             <div class="col-xs-9 col-xs-offset-3 col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
