--- a/application/admin/view/public/tinymce.html
+++ b/application/admin/view/public/tinymce.html
@@ -3,7 +3,7 @@ tinymce.init({
 selector: 'textarea',
 language: 'zh_CN',
 automatic_uploads: true,
-images_upload_url: '/admin/blog/uploadImage',
+images_upload_url: '/admin/index/uploadImage',
 plugins: [
 'advlist autolink lists link image charmap print preview hr anchor pagebreak',
 'searchreplace wordcount visualblocks visualchars code fullscreen',
