--- a/application/admin/view/activity/index.html
+++ b/application/admin/view/activity/index.html
@@ -6,8 +6,28 @@
 {block name="header"}
 <script type="text/javascript">
     $(function(){
-        $(".deleteactivity").click(function(){
-            alert("delete");
+        $(".deleteactivity").click(function () {
+            var id = $(this).parents('tr:first').find('td:first').text();
+            row = $(this).parents('tr:first');
+            $.ajax({
+                url:'/admin/activity/deleteactivity',
+                method:'POST',
+                data:{id:id},
+                dataType:'json',
+                success: function(data){
+                    if(data.result == 0)
+                    {
+                        row.remove();
+                    }
+                    else
+                    {
+                        alert(data.message);
+                    }
+                },
+                error:function(data) {
+                    alert("厉害了，发生了一个一个内部错误");
+                }
+            })
         });
     });
 </script>
