--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,6 +1,6 @@
 {extend name="public:base" /}
 
-{block name="title"}主页{/block}
+{block name="title"}徒步天涯户外俱乐部{/block}
 
 {block name="tab"}index{/block}
 
@@ -13,29 +13,6 @@
 <div class="banner">
      <div class="container">
          <div class="banner-grids">
-            <div class="col-md-6 banner-grid grid1">
-                  <div class="package">
-                     <h3><a href="#">国内</a></h3>
-                     <ul>
-                         <li><a href="#">Washington, </a></li>
-                         <li><a href="#">Houston, </a></li>
-                         <li><a href="#">Los angeles</a></li>
-                     </ul>
-                     <span class="glyphicon1 glyphicon-globe" aria-hidden="true"></span>
-                 </div>
-             </div>
-             <div class="col-md-6 banner-grid">
-                 <div class="package">
-                     <h3><a href="#">国际</a></h3>
-                     <ul>
-                         <li><a href="#">Hong Kong, </a></li>
-                         <li><a href="#">Germany, </a></li>
-                         <li><a href="#">Italy</a></li>
-                     </ul>
-                     <span class="glyphicon1 glyphicon-plane" aria-hidden="true"></span>
-                 </div>
-             </div>
-             <div class="clearfix"></div>
          </div>
      </div>
 </div>
