--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -5,6 +5,7 @@
     <link href="/static/css/bootstrap.css" rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="/static/css/lightbox.css">
     <!-- jQuery (necessary JavaScript plugins) -->
+    <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/bootstrap.js"></script>
     <!-- Custom Theme files -->
     <link href="/static/css/style.css" rel='stylesheet' type='text/css' />
@@ -17,9 +18,8 @@
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 
-    <script src="/static/js/jquery.min.js"></script>
 
-
+    {block name="header"}{/block}
 </head>
 <body>
 <!-- header -->
@@ -60,8 +60,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <!--/navbar-->
         </div>
         <div class="clearfix"></div>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script type="text/javascript" src="/static/js/bootstrap-3.1.1.min.js"></script>
     </div>
 </div>
 {block name="content"}{/block}
