add qrcode to about page

--- a/application/index/view/contact/index.html
+++ b/application/index/view/contact/index.html
@@ -133,6 +133,10 @@
                     <a href="#"><span class="icon fa fa-qq faicon3" aria-hidden="true"></span></a>
                     <p>545753161</p>
                 </div>
+                <div class="f-1">
+                    <a href="#"><span class="icon fa fa-wechat faicon3" aria-hidden="true"></span></a>
+                    <p>luotao04110</p>
+                </div>
             </div>
             <div class="col-md-8 footer-right">
                 <input type="text" placeholder="姓名" name="name" id="contact_name"/>
