--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -14,11 +14,8 @@
     <!--//theme style-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="Goaway Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+    <meta name="keywords" content="徒步天涯户外俱乐部,徒步,户外,徒步天涯" />
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-
-
     {block name="header"}{/block}
 </head>
 <body>
@@ -51,6 +48,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <li id="nav_destinations"><a href="/index/activity">活动</a></li>
                         <li id="nav_about"><a href="/index/about">关于</a></li>
                         <li id="nav_contact"><a href="/index/contact">联系我们</a></li>
+                        <li id="nav_taobao"><a href="https://shop100117916.taobao.com/?spm=a230r.7195193.1997079397.2.cCDGWb">户外商店</a></li>
                     </ul>
                 </div>
                 <!--/navbar collapse-->
