--- a/application/index/view/about/index.html
+++ b/application/index/view/about/index.html
@@ -22,8 +22,8 @@
                 <ul>
                     <li><a href="#">江浙沪周末短线活动</a></li>
                     <li><a href="#">不定期的长线活动</a></li>
+                    <li><a href="#">户外拓展培训</a></li>
                     <li><a href="#">团队建设活动定制</a></li>
-
                 </ul>
             </div>
             <div class="col-md-6 about-pic">
@@ -31,6 +31,24 @@
             </div>
             <div class="clearfix"></div>
         </div>
+        <div class="about-top-sec">
+        <h3>加入我们</h3>
+        <h4>您可以通过关注公众号以及加入QQ群的方式加入到我们</h4>
+            <div class="row">
+                <div class="col-xs-6 mobile-media">
+                    <h4>加入QQ群 53446033</h4>
+                    <div class="text-center">
+                        <img src="/static/images/qq.png"/>
+                    </div>
+                </div>
+                <div class="col-xs-6 mobile-media">
+                    <h4>关注微信公众号</h4>
+                    <div>
+                        <img src="/static/images/wechat.jpg"/>
+                    </div>
+                </div>
+            </div>
+    </div>
     </div>
 </div>
 {/block}
