adjust leader slider

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -106,11 +106,10 @@
                   <li>
                      <div class="testimonial-grids">
                          <div class="testimonial-left">
-                             <img src="/static/images/t3.jpg" alt="" />
+                             <img src="/static/images/soap.jpg" alt="" />
                          </div>
                          <div class="testimonial-right">
-                                <p><span>"</span> Lorem ipsum dolor sit amet consec tetuer adi piscing elit Praesent vestibulum 
-                                    piscing voluptatem Nunc a suscipit mauris. Praesent suscipit, metus sit amet feugiat hendrerit, enim lacinia velit eros sed massa. In vulputate justo in vitae lacus accusantium doloremque laudantium elerisque ipsum vehicula pharetra elit Praesent vestibulum lacus<span>"</span>
+                                <p><span>"</span> 放下手机，背起背包，穿行在风中，让自己置身于大自然的怀抱，享受那最原始的风景；清空脑海里中的纷繁，远离喧嚣浮躁的城市，隐没于绵绵群山，给自己一分久违的安静，让心灵有个短暂的休憩。<span>"</span>
                                 </p>
                                 <h5>寒冰</h5>
                                 <h6>领队</h6>
@@ -118,14 +117,27 @@
                          <div class="clearfix"> </div>
                      </div>
                   </li>
+                 <li>
+                     <div class="testimonial-grids">
+                         <div class="testimonial-left">
+                             <img src="/static/images/apple.jpg" alt="" />
+                         </div>
+                         <div class="testimonial-right">
+                             <p><span>"</span> 喜欢徒步的人 不一定爱上的都是风景， 有时徒步是一种感情的释放和发泄，有人说，不爱徒步的人就是不解风情的人。其实，人爱上的不是单一的徒步，而是背起背包，将心事一点点丢失在路途中。<span>"</span>
+                             </p>
+                             <h5>Apple</h5>
+                             <h6>领队</h6>
+                         </div>
+                         <div class="clearfix"> </div>
+                     </div>
+                 </li>
                   <li>
                      <div class="testimonial-grids">
                          <div class="testimonial-left">
-                             <img src="/static/images/t2.jpg" alt="" />
+                             <img src="/static/images/guoke.jpg" alt="" />
                          </div>
                          <div class="testimonial-right">                                
-                                <p><span>"</span> Lorem ipsum dolor sit amet consec tetuer adi piscing elit Praesent vestibulum 
-                                    piscing voluptatem accusantium doloremque laudantium elerisque ipsum Nunc a suscipit mauris. Praesent suscipit, metus sit amet feugiat hendrerit, enim lacinia velit eros sed massa. In vulputate justo in vitae lacus vehicula pharetra elit Praesent vestibulum lacus<span>"</span>
+                                <p><span>"</span> 过客没有什么文化，当我让他把他对户外的一些感想告诉我的时候，他说让我随便抄一段，但是我并不是那么随便的人，所以我就没有抄，这是原创。不用感谢我，我就是这么一个助人为乐的BOY。<span>"</span>
                                 </p>
                                 <h5>过客</h5>
                                 <h6>领队</h6>
