--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -23,7 +23,7 @@
 <div class="top-header">
     <div class="container">
         <div class="logo">
-            <h1><a href="/"><span class="glyphicon glyphicon-road" aria-hidden="true"></span>徒步天涯</a></h1>
+            <a href="/"><img src="/static/images/logo.png"/></a>
         </div>
     </div>
 </div>
