--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -162,7 +162,7 @@
          <div class="destintn-grids">
              {/if}
              <div class="col-md-4 desti-grid">
-                 <a href="/index/activity/view?id={$activity.id}"><img class="example-image" src="/{$activity.cover}" alt=""/></a>
+                 <a href="/index/activity/view?id={$activity.id}"><img class="example-image" src="{$activity.cover}" alt=""/></a>
                  <div class="desti-info">
                      <h5><a href="/index/activity/view?id={$activity.id}"><span>#{$activity.start|date="n月j号",###}#</span>{$activity.caption}</a></h5>
                  </div>
