add picture for yiwang

--- a/application/admin/view/activity/edit.html
+++ b/application/admin/view/activity/edit.html
@@ -104,11 +104,11 @@
         </div>
         <textarea name="content" id="content" class="mce_edit_panel" style="display:none;">{$activity.content}</textarea><br/>
         <div class="form-group">
-            <label for="cover">封面图片<mark>比例为4:3</mark></label>
+            <label for="cover">封面图片<mark>比例为650x400</mark></label>
             <input type="file" class="form-control" id="cover" name="cover" />
         </div>
         <div style="text-align: center;">
-            <img id="coverpreview" src="/{$activity.cover}" class="cover_preview"/>
+            <img id="coverpreview" src="{$activity.cover}" class="cover_preview"/>
         </div>
 
         <label class="checkbox-inline">
