--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -50,8 +50,8 @@
              </div>
              <div class="col-md-4 choos-grid">
                  <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>
-                 <h4>还有嘛，来一个</h4>
-                 <p>特码的老子不是做文字编辑的，谁能再编一个出来。</p>
+                 <h4>便宜</h4>
+                 <p>对，还有价格谁比我们低，你告诉遗忘，“老大，真的不能再降价了啊！（我也不知道为什么到这里话风变成了这样）”。</p>
              </div>
              <div class="clearfix"></div>
          </div>
@@ -91,11 +91,10 @@
                   <li>
                      <div class="testimonial-grids">
                          <div class="testimonial-left">
-                             <img src="/static/images/t1.jpg" alt="" />
+                             <img src="/static/images/yiwang.jpg" alt="" />
                          </div>
                          <div class="testimonial-right">                                
-                                <p><span>"</span> Lorem ipsum dolor sit amet consec tetuer adi piscing elit Praesent vestibulum 
-                                    piscing voluptatem accusantium doloremque laudantium elerisque ipsum Nunc a suscipit mauris. Praesent suscipit, metus sit amet feugiat hendrerit, enim lacinia velit eros sed massa. In vulputate justo in vitae lacus vehicula pharetra elit Praesent vestibulum lacus<span>"</span>
+                                <p><span>"</span>山大王说他很帅，随便从相册里面找一张就好了，我就从相册里面随便找了一张作为他的头像，我觉得看手机这张很diao，哦，他并有什么介绍，他急着跟别人撸串抛下我就跑了，我现在很凌乱。<span>"</span>
                                 </p>
                                 <h5>遗忘</h5>
                                 <h6>山大王</h6>
