--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -63,7 +63,7 @@ a#toTop{
 	margin-right:5px;
 }
 .logo a{
-	background: #73eac4;
+	background: #ffcb05;
   padding: 1.6em 0.7em;
   display:inline-block;
 }
