--- a/application/admin/view/activity/create.html
+++ b/application/admin/view/activity/create.html
@@ -100,7 +100,7 @@
         </div>
         <textarea name="content" id="content" class="mce_edit_panel" style="display: none;"></textarea><br/>
         <div class="form-group">
-            <label for="cover">封面图片<mark>比例为4:3</mark></label>
+            <label for="cover">封面图片<mark>比例为650x400</mark></label>
             <input type="file" class="form-control" id="cover" name="cover" />
         </div>
         <div style="text-align: center;">
