--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -119,6 +119,20 @@
                  <li>
                      <div class="testimonial-grids">
                          <div class="testimonial-left">
+                             <img src="/static/images/dapang.jpg" alt="" />
+                         </div>
+                         <div class="testimonial-right">
+                             <p><span>"</span>妹子  要看手相吗？（老子做个页面容易么，让凑几十个字的寄语都费劲，你除了看手相能干点正事不，原谅我这么对废话，我是为了排版啊，排版啊，排版啊，差不多够了，好像少俩字符，现在够了。）<span>"</span>
+                             </p>
+                             <h5>大胖</h5>
+                             <h6>领队</h6>
+                         </div>
+                         <div class="clearfix"> </div>
+                     </div>
+                 </li>
+                 <li>
+                     <div class="testimonial-grids">
+                         <div class="testimonial-left">
                              <img src="/static/images/apple.jpg" alt="" />
                          </div>
                          <div class="testimonial-right">
