add aside panel for activity view page

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -122,7 +122,7 @@
                              <img src="/static/images/dapang.jpg" alt="" />
                          </div>
                          <div class="testimonial-right">
-                             <p><span>"</span>妹子  要看手相吗？（老子做个页面容易么，让凑几十个字的寄语都费劲，你除了看手相能干点正事不，原谅我这么对废话，我是为了排版啊，排版啊，排版啊，差不多够了，好像少俩字符，现在够了。）<span>"</span>
+                             <p><span>"</span>妹子  要看手相吗？（看得出大胖是个情商很低的流氓，在这里肆无忌惮的招揽生意，我相信有稍微有点智商的人都不会上当，我真的没有在说你犀牛。）<span>"</span>
                              </p>
                              <h5>大胖</h5>
                              <h6>领队</h6>
