--- a/application/index/view/activity/view.html
+++ b/application/index/view/activity/view.html
@@ -26,34 +26,51 @@
         <li><a href="/index/activity/">全部活动</a></li>
         <li class="active">{$activity.caption}</li>
     </ol>
-    <h1 class="activity-caption">{$activity.caption}</h1>
-    <br/>
-    <div class="activity-details">
-        <table>
-            <tr>
-                <td><label>目的地：</label></td>
-                <td>{$activity.location}</td>
-            </tr>
-            <tr>
-                <td><label>开始时间：</label></td>
-                <td>{$activity.start|date="n月j号",###}</td>
-            </tr>
-            <tr>
-                <td><label>结束时间：</label></td>
-                <td>{$activity.end|date="n月j号",###}</td>
-            </tr>
-            <tr>
-                <td><label>价格：</label></td>
-                <td>￥{$activity.price}</td>
-            </tr>
-        </table>
-        <br/>
-        <button class="btn btn-primary" id="order-now" data-toggle="modal" data-target="#order-now-dialog">现在报名</button>
-    </div>
-    <br/>
-    <hr/>
-    <div class="activity-content">
-        {$activity.content}
+    <div class="row">
+        <main class="col-md-8 activity-main">
+            <h1 class="activity-caption">{$activity.caption}</h1>
+            <br/>
+            <div class="activity-details">
+                <table>
+                    <tr>
+                        <td><label>目的地：</label></td>
+                        <td>{$activity.location}</td>
+                    </tr>
+                    <tr>
+                        <td><label>开始时间：</label></td>
+                        <td>{$activity.start|date="n月j号",###}</td>
+                    </tr>
+                    <tr>
+                        <td><label>结束时间：</label></td>
+                        <td>{$activity.end|date="n月j号",###}</td>
+                    </tr>
+                    <tr>
+                        <td><label>价格：</label></td>
+                        <td>￥{$activity.price}</td>
+                    </tr>
+                </table>
+                <br/>
+                <button class="btn btn-primary" id="order-now" data-toggle="modal" data-target="#order-now-dialog">现在报名</button>
+            </div>
+            <br/>
+            <hr/>
+            <div class="activity-content">
+                {$activity.content}
+            </div>
+        </main>
+        <aside class="col-md-4 activity-aside">
+            <div class="widget">
+                <h4 class="title">社区</h4>
+                <p>QQ群：53446033</p>
+            </div>
+
+            <div class="widget">
+                <h4 class="title">活动推荐</h4>
+                {foreach name="featuredActivities" item="activity"}
+                <p><a href="/index/activity/view?id={$activity.id}">#{$activity.start|date="n月j号",###}# {$activity.caption}</a></p>
+                {/foreach}
+            </div>
+        </aside>
     </div>
 </div>
 
