--- a/application/index/view/activity/view.html
+++ b/application/index/view/activity/view.html
@@ -1,8 +1,8 @@
 {extend name="public:base" /}
 
-{block name="title"}活动{/block}
+{block name="title"}徒步天涯户外俱乐部-{$activity.caption}{/block}
 
-{block name="tab"}page_activity{/block}
+{block name="tab"}destinations{/block}
 
 {block name="header"}
 <style>
