--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -150,7 +150,7 @@
                              <img src="/static/images/guoke.jpg" alt="" />
                          </div>
                          <div class="testimonial-right">                                
-                                <p><span>"</span> 过客没有什么文化，当我让他把他对户外的一些感想告诉我的时候，他说让我随便抄一段，但是我并不是那么随便的人，所以我就没有抄，这是原创。不用感谢我，我就是这么一个助人为乐的BOY。<span>"</span>
+                                <p><span>"</span> 我没有什么文化，当九五二七让我把我对户外的一些感想告诉他的时候，我说让他随便抄一段，但是他并不是那么随便的人，所以他就没有抄，这是他的原创。他就是这么一个助人为乐的BOY。<span>"</span>
                                 </p>
                                 <h5>过客</h5>
                                 <h6>领队</h6>
@@ -158,6 +158,20 @@
                          <div class="clearfix"> </div>
                      </div>
                   </li>
+                 <li>
+                     <div class="testimonial-grids">
+                         <div class="testimonial-left">
+                             <img src="/static/images/9527.jpg" alt="" />
+                         </div>
+                         <div class="testimonial-right">
+                             <p><span>"</span>过客没有什么文化，当我让他把他对户外的一些感想告诉我的时候，他说让我随便抄一段，但是我并不是那么随便的人，所以我就没有抄，这是原创。不用感谢我，我就是这么一个助人为乐的BOY。<span>"</span>
+                             </p>
+                             <h5>九五二七</h5>
+                             <h6>领队</h6>
+                         </div>
+                         <div class="clearfix"> </div>
+                     </div>
+                 </li>
              </ul>
           </div>
           </div>
