change some of the pictures

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -87,6 +87,7 @@
                         });
          </script>
          <div  id="top" class="callbacks_container">
+             <a name="leaders"></a>
              <ul class="rslides" id="slider2">
                   <li>
                      <div class="testimonial-grids">
