add font family and size to tiny mce

--- a/application/admin/view/public/tinymce.html
+++ b/application/admin/view/public/tinymce.html
@@ -12,6 +12,8 @@ plugins: [
 ],
 toolbar1: 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',
 toolbar2: 'print preview media | forecolor backcolor emoticons | codesample',
+toolbar3: 'fontselect | fontsizeselect',
+font_formats: '微软雅黑=Microsoft yahei;Arial=arial,helvetica,sans-serif;Courier New=courier new,courier,monospace;AkrutiKndPadmini=Akpdmi-n;',
 images_upload_credentials: true,
 paste_data_images: true
 });
