--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -46,6 +46,7 @@
                     <ul class="nav navbar-nav">
                         <li id="nav_index"><a href="/">主页</a></li>
                         <li id="nav_destinations"><a href="/index/activity">活动</a></li>
+                        <li id="nav_blog"><a href="/index/blog">博客</a></li>
                         <li id="nav_about"><a href="/index/about">关于</a></li>
                         <li id="nav_contact"><a href="/index/contact">联系我们</a></li>
                         <li id="nav_taobao"><a href="https://shop100117916.taobao.com/?spm=a230r.7195193.1997079397.2.cCDGWb">户外商店</a></li>
