--- a/application/index/view/activity/view.html
+++ b/application/index/view/activity/view.html
@@ -33,8 +33,28 @@
             <div class="activity-details">
                 <table>
                     <tr>
-                        <td><label>目的地：</label></td>
+                        <td><label>活动地点：</label></td>
                         <td>{$activity.location}</td>
+                        <td><label>难度指数：</label></td>
+                        <td><?php echo str_repeat("★", $activity->difficulty);?></td>
+                    </tr>
+                    <tr>
+                        <td><label>集合地点：</label></td>
+                        <td>{$activity.gather_location}</td>
+                        <td><label>强度指数：</label></td>
+                        <td><?php echo str_repeat("★", $activity->strength);?></td>
+                    </tr>
+                    <tr>
+                        <td><label>活动领队：</label></td>
+                        <td>{$activity.leaders}</td>
+                        <td><label>危险指数：</label></td>
+                        <td><?php echo str_repeat("★", $activity->danger);?></td>
+                    </tr>
+                    <tr>
+                        <td><label>住宿方式：</label></td>
+                        <td>{$activity.sleep_style}</td>
+                        <td><label>风景指数：</label></td>
+                        <td><?php echo str_repeat("★", $activity->view);?></td>
                     </tr>
                     <tr>
                         <td><label>开始时间：</label></td>
